[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Roman Satarov <r.satarov2016@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rasa = "^3.6.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
